обновление главной страницы

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-        Контакты в шапке
+        <a href="https://msngr.link/tg/Ivan_Blagodarov">Написать в Telegram</a>
+        <!--ссылка на контакт-->
       </div>
     </header>
 
